--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -13,10 +13,10 @@
     <title>Cloudzi</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="Bootstrap/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="Bootstrap/assets/css/freelancer.min.css" rel="stylesheet">
+    <link href="assets/css/freelancer.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
