--- a/Bootstrap/ex.html
+++ b/Bootstrap/ex.html
@@ -51,7 +51,7 @@
                     </button>
                     <a class="navbar-brand" href="#"><img src="img/logo/logo.png" class="img-responsive" alt="logo"></a>
                 </div>
-                <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
+                <!-- <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                     <div class="col-md-8 col-xs-12 nav-wrap">
                         <ul class="nav navbar-nav">
                             <li><a href="#owl-hero" class="page-scroll">Home</a></li>
@@ -68,7 +68,7 @@
                             <li><a href="https://www.instagram.com/yony_helen/" title="새창으로 열림" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </nav>
         <div id="owl-hero" class="owl-carousel owl-theme">
