--- a/Lexus/lexus_mine/Lexus_Story/begining.html
+++ b/Lexus/lexus_mine/Lexus_Story/begining.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="image_src" href="image/lexus-nav-logo.png.jpg">
-<link rel="stylesheet" href="../css/import.css">
-<title>lexus</title>
+<title>begining</title>
+<link rel="stylesheet" href="/thelexus/asset/css/import.css">
 </head>
 <body>
 
 
-
-<!-- The Begining -->
 <section id="st_begin">
 
 <!-- <img src="../images\LEXUSSTORY\THEBEGINING\bg_s0.jpg" alt="THE BEGINING 배경화면">
         배경화면 CSS로 넣기  -->
 
     <div class="st_begining">
-      <ul>
-        <li>
+
           <div class="begin_content">
-            <h2><img src="../images/LEXUSSTORY/THEBEGINING/head_s0.png" alt="THE BEGINING 로고"></h2>
-            <img src="../images/LEXUSSTORY/THEBEGINING/txt_s0.png" alt="모든것은 작은 의지로부터 시작되다">
+          	<ul>
+	          	<li>
+		            <h2><img src="../../asset/image/story/begining/head_s0.png" alt="THE BEGINING 로고"></h2>
+		            <img src="../../asset/image/story/begining/txt_s0.png" alt="모든것은 작은 의지로부터 시작되다">
+	          	</li>
+          	</ul>
           </div>
-        </li>
-      </ul>
+
     </div>
 
     <div class="birth_begining">
       <ul>
         <li>
-          <img src="../images/LEXUSSTORY/THEBEGINING/txt_s1.png" alt="lexus the finest luxury car ever built on the planet">
-          <img src="../images/LEXUSSTORY/THEBEGINING/img_s1.jpg" alt="car image">
+          <img src="../../asset/image/story/begining/txt_s1.png" alt="lexus the finest luxury car ever built on the planet">
+          <img src="../../asset/image/story/begining/img_s1.jpg" alt="car image">
         </li>
         <li>
-          <div>
-            <h3 class="birth_logo"><img src="../images/LEXUSSTORY/THEBEGINING/head_s2.png" alt="The Birth Of LEXUS"></h3>
-            <p><img src="../images/LEXUSSTORY/THEBEGINING/txt_s2_1.png" alt="Decision has been made"></p>
-          </div>
+           <h3 class="Birth_logo"><img src="../../asset/image/story/begining/head_s2.png" alt="The Birth Of LEXUS"></h3>
+           <p><img src="../../asset/image/story/begining/txt_s2_1.png" alt="Decision has been made"></p>
         </li>
         <li>
-          <div>
-            <p><img src="../images/LEXUSSTORY/THEBEGINING/txt_s2_2.png" alt=""></p>
-            <img src="../images/LEXUSSTORY/THEBEGINING/img_s2_2.jpg" alt="도요타회장">
-          </div>
+            <p><img src="../../asset/image/story/begining/txt_s2_2.png" alt=""></p>
+            <img src="../../asset/image/story/begining/img_s2_2.jpg" alt="도요타회장">
         </li>
         <li>
-            <p><img src="../images/LEXUSSTORY/THEBEGINING/txt_s2_3.png" alt="LS 400의 시작"></p>
+            <p><img src="../../asset/image/story/begining/txt_s2_3.png" alt="LS 400의 시작"></p>
         </li>
       </ul>
     </div>
@@ -56,32 +49,28 @@
     <div class="launching_begining">
       <ul>
         <li>
-          <div>
-            <h3><img src="../images/LEXUSSTORY/THEBEGINING/head_s3.png" alt="Launching The Brand"></h3>
-            <p><img src="../images/LEXUSSTORY/THEBEGINING/bg_s3.jpg" alt="Launching's car image"></p>
-          </div>
+        	<div>
+            	<h3><img src="../../asset/image/story/begining/head_s3.png" alt="Launching The Brand"></h3>
+            	<p><img src="../../asset/image/story/begining/txt_s3_1.png" alt="LS400 The first Lexus"></p>
+            </div>
         </li>
         <li>
-          <div>
-            <p><img src="../images/LEXUSSTORY/THEBEGINING/txt_s3_2.png" alt="Fist launching in USA"></p>
-            <img src="../images/LEXUSSTORY/THEBEGINING/img_s3_2.jpg" alt="first Lexus In US image">
-          </div>
+            <p><img src="../../asset/image/story/begining/txt_s3_2.png" alt="Fist launching in USA"></p>
+            <img src="../../asset/image/story/begining/img_s3_2.jpg" alt="first Lexus In US image">
         </li>
         <li>
-            <p><img src="../images/LEXUSSTORY/THEBEGINING/txt_s3_3.png" alt="LS 400 Story"></p>
+            <p><img src="../../asset/image/story/begining/txt_s3_3.png" alt="LS 400 Story"></p>
             <div>
-              <img src="../images/LEXUSSTORY/THEBEGINING/img_s3_3.jpg" alt="LS 400 video'image">
-              <span><img src="../images/LEXUSSTORY/THEBEGINING/btn_model_play.png" alt="play button"></span>
+              <img src="../../asset/image/story/begining/img_s3_3.jpg" alt="LS 400 video'image">
+              <span><img src="../../asset/image/story/begining/btn_model_play.png" alt="play button"></span>
             </div>
             <div class="play_video">
               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yUeAT3mY9fk"  ></iframe>
             </div>
         </li>
         <li>
-          <div>
-            <p><img src="../images/LEXUSSTORY/THEBEGINING/txt_s3_4.png" alt="Best quality ever"></p>
-            <img src="../images/LEXUSSTORY/THEBEGINING/img_s3_4.png" alt="lexus JD POWER">
-          </div>
+            <p><img src="../../asset/image/story/begining/txt_s3_4.png" alt="Best quality ever"></p>
+            <span><img src="../../asset/image/story/begining/img_s3_4.png" alt="lexus JD POWER"></span>
         </li>
       </ul>
     </div>
