--- a/WebContent/pages/story/project.html
+++ b/WebContent/pages/story/project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- <script src="/thelexus/asset/js/story.js"></script> -->
 <link rel="stylesheet" href="../../asset/css/import.css">
@@ -47,7 +47,7 @@
 		  	  </section>
 		  	</li>
 
-		  	<li class="amazing-in-motion" style="display:block";>
+		  	<li class="amazing-in-motion" style="display:none";>
 					<section class="motion-con-1">
 						<div class="fig-con">
 							<img src="../../asset/image/story/project/kvback_0.jpg" alt="SLIDE 이미지 0" />
@@ -67,7 +67,7 @@
 							<p><img src="../../asset/image/story/project/kvback_1_txt.png" alt="" /></p>
 						</div>
 					</section>
-					<section class="motino-con-3">
+					<section class="motion-con-3">
 						<div class="fig-content">
 							<img src="../../asset/image/story/project/kvback_2.jpg" alt="SLIDE 이미지 2" />
 						</div>
@@ -79,20 +79,21 @@
 						<div class="hover_wrap">
 							<h2><img src="../../asset/image/story/project/lexus_hover.png" alt="LIVE #Lexus hover" /></h2>
 							<ul>
-								<li>
+								<li class="step">
 									<img src="../../asset/image/story/project/hover_step1_txt.png" alt="THESTORY 마침내 트랙 위를 날다 불가능이라 생각되는 것을 가능하게 만들기 위해 기술, 디자인, 혁신의 모든 한계를 넘다." />
 									<a href="#">
 										<img src="../../asset/image/story/project/hover_step1_img.jpg" alt="THESTORY image" />
-										<img src="../../asset/image/story/project/hover_play_btn.png" alt="자세히 보기" />
+										<img src="../../asset/image/story/project/hover_play_btn.png" class="right_play_btn" alt="자세히 보기" />
 									</a>
 								</li>
-								<li>
+								<li class="step">
 									<a href="#">
 										<img src="../../asset/image/story/project/hover_step2_img.jpg" alt="THE STORY 마침내 트랙 위를 날다 불가능이라 생각되는 것을 가능하게 만들기 위해 기술, 디자인, 혁신의 모든 한계를 넘다." />
-										<img src="../../asset/image/story/project/hover_play_btn.png" alt="영상 재생" />
 									</a>
 									<img src="../../asset/image/story/project/hover_step2_txt.png" alt="THE TECH 초전도체 자석과 액체질소의 완전한 결합 액체 질소로 냉각한 초전도체와 호버파크에 설치된 자석 트랙으로 공중에 부상하다" />
-									<ul>
+									<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="영상 재생" />
+
+									<ul class="fig-thumb">
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step2_thumb1.jpg" alt="" /></a></li>
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step2_thumb2.jpg" alt="" /></a></li>
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step2_thumb3.jpg" alt="" /></a></li>
@@ -100,18 +101,18 @@
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step2_thumb5.jpg" alt="" /></a></li>
 									</ul>
 								</li>
-								<li>
+								<li class="step">
 									<img src="../../asset/image/story/project/hover_step3_txt1.png" alt="THE BOARD" />
 									<a href="#">
 										<img src="../../asset/image/story/project/hover_step3_img1.jpg" alt="" />
-										<img src="../../asset/image/story/project//hover_play_btn.png" alt="자세히 보기" />
+										<img src="../../asset/image/story/project//hover_play_btn.png" class="right_play_btn" alt="자세히 보기" />
 									</a>
 									<a href="#">
 										<img src="../../asset/image/story/project/hover_step3_img2.jpg" alt="" />
-										<img src="../../asset/image/story/project/hover_play_btn.png" alt="자세히 보기" />
+										<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="자세히 보기" />
 									</a>
 									<img src="../../asset/image/story/project/hover_step3_txt2.png" alt="" />
-									<ul>
+									<ul class="fig-thumb">
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step3_thumb1.jpg" alt="" /></a></li>
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step3_thumb2.jpg" alt="" /></a></li>
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step3_thumb3.jpg" alt="" /></a></li>
@@ -121,13 +122,13 @@
 
 
 								</li>
-								<li>
+								<li class="step step_re">
 									<a href="#">
 										<img src="../../asset/image/story/project/hover_step4_img.jpg" alt="" />
-										<img src="../../asset/image/story/project/hover_play_btn.png" alt="자세히 보기" />
+										<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="자세히 보기" />
 									</a>
 									<img src="../../asset/image/story/project/hover_step4_txt.png" alt="THE RIDE 모든 것이 새로운 경험이었다 Hoverboard Test Ride ROSS MCGOURAN" />
-									<ul>
+									<ul class="fig-thumb">
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step4_thumb1.jpg" alt="" /></a></li>
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step4_thumb2.jpg" alt="" /></a></li>
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step4_thumb3.jpg" alt="" /></a></li>
@@ -135,13 +136,13 @@
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step4_thumb5.jpg" alt="" /></a></li>
 									</ul>
 								</li>
-								<li>
+								<li class="step step_re">
 									<a href="#">
 										<img src="../../asset/image/story/project/hover_step5_img.jpg" alt="" />
-										<img src="../../asset/image/story/project/hover_play_btn.png" alt="자세히 보기" />
+										<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="자세히 보기" />
 									</a>
 									<img src="../../asset/image/story/project/hover_step5_txt.png" alt="THE PARK 기술력과 상상력이 하나가 되는 곳 최적의 보드 라이딩이 가능한 데크와 200미터 길이의 자석 트랙이 설치된 호버파크에서 기술력과 상상력이 하나가 되다" />
-									<ul>
+									<ul class="fig-thumb">
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step5_thumb1.jpg" alt="" /></a></li>
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step5_thumb2.jpg" alt="" /></a></li>
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step5_thumb3.jpg" alt="" /></a></li>
@@ -176,19 +177,23 @@
 									</li>
 								</ul>
 							<!-- </div> -->
-							<a href="http://www.lexus-int.com/amazinginmotion/" target="_blank">
+							<a href="http://www.lexus-int.com/amazinginmotion/" target="_blank" class="btn_view_detail">
 								<img src="../../asset/image/story/project/btn_view_detail.png" alt="자세히 보기" />
 							</a>
 						</div>
 					</section>
 		  	</li>
 
-		  	<li class="lexus-short-film-con" style="display:none";>
+		  	<li class="lexus-short-film-con" style="display:none;";>
 					<section class="film-con-1">
-						<p><img src="../../asset/image/story/project/shortfilm_kv.jpg" alt="LEXUS SHORT FILMS 키비주얼" /></p>
-						<h2><img src="../../asset/image/story/project/shortfilm_maintxt.png" alt="LEXUS SHORT FILMS" /></h2>
-						<span><img src="../../asset/image/story/project/shortfilm_subtxt.png" alt="젊은 영화 감독들의 상상력과 열정이 어우러진 무대" /></span>
-						<a href="#">click to go down</a>
+						<div class="fig-content">
+								<img src="../../asset/image/story/project/shortfilm_kv.jpg" alt="LEXUS SHORT FILMS 키비주얼" />
+						</div>
+						<div class="fig-txt">
+								<h2><img src="../../asset/image/story/project/shortfilm_maintxt.png" alt="LEXUS SHORT FILMS" /></h2>
+								<span><img src="../../asset/image/story/project/shortfilm_subtxt.png" alt="젊은 영화 감독들의 상상력과 열정이 어우러진 무대" /></span>
+						</div>
+						<a href="#" class="btn-next-arr">click to go down</a>
 						<!-- background:url('/asset/images/model/common/arr_dn.png') 0 0 no-repeat; -->
 					</section>
 					<section class="film-con-2">
@@ -213,7 +218,7 @@
 					</section>
 					<section class="film-con-3">
 						<div class="film-list_wrap">
-							<img src="../../asset/image/story/project/shortfilm_title1.png" alt="LEXUS SHORT FILM WINNER" />
+							<h3><img src="../../asset/image/story/project/shortfilm_title1.png" alt="LEXUS SHORT FILM WINNER" /></h3>
 							<ol>
 								<li>
 									<ul>
@@ -255,7 +260,7 @@
 					</section>
 					<section class="film-con-4">
 						<div class="short-film_wrap">
-							<img src="../../asset/image/story/project/shortfilm_title2.png" alt="LEXUS SHORT FILM" />
+							<h3><img src="../../asset/image/story/project/shortfilm_title2.png" alt="LEXUS SHORT FILM" /></h3>
 							<img src="../../asset/image/story/project/shortfilm_sub_title.png" alt="신진 영화 감독들의 상상력과 열정이 어우러진 다양한 작품들을 만나보세요" />
 							<ul class="img-lists-con">
 								<li class="img-lists"><img src="../../asset/image/story/project/shortfilm_listimg0.jpg" alt="LEXUS SHORT FILM 이미지1" /></li>
@@ -271,15 +276,15 @@
 					</section>
 		  	</li>
 
-		  	<li class="lexus-design-award" style="display:none";>
+		  	<li class="lexus-design-award" style="display:block";>
 					<section class="award-con-1">
 						<div class="fig-content">
 							<img src="../../asset/image/story/project/design_award_kv.jpg" alt="Lexus-Design-Award 이미지" />
 						</div>
 						<div class="main-txt">
-							<h2><img src="" alt="" /></h2>
-							<p><img src="" alt="" /></p>
-							<a href="#">click to go down</a>
+							<h2><img src="../../asset/image/story/project/design_award_maintxt.png" alt="LEXUS SHORT FILMS" /></h2>
+							<p><img src="../../asset/image/story/project/design_award_subtxt.png" alt="전세계 청년 디자이너들의 등용문" /></p>
+							<a href="#" class="btn-next-arr">click to go down</a>
 						</div>
 					</section>
 					<section class="award-con-2">
