--- a/WebContent/pages/story/project3.html
+++ b/WebContent/pages/story/project3.html
@@ -270,7 +270,7 @@
 				<div class="main-txt">
 					<h2><img src="" alt="" /></h2>
 					<p><img src="" alt="" /></p>
-					<a href="#">click to go down</a>
+					<a href="#" class="btn-next-arr">click to go down</a>
 				</div>
 			</section>
 			<section class="award-con-2">
