--- a/WebContent/pages/story/project.html
+++ b/WebContent/pages/story/project.html
@@ -299,9 +299,7 @@
 										<p><img src="../../asset/image/story/project/design_award_detail_date.png" alt="LEXUS DESIGN AWARD 포스터 이미지" /></p>
 										<div class="btn-area">
 											<a href="http://www.lexus-int.com/lexus-design/lexus-design-award/" target="_blank">자세히 보기</a>
-											<!-- background:url(../images/lexus_story/amazing/btn_design_award_seemore.jpg) 0 0 no-repeat; -->
 											<a href="http://www.designboom.com/competition/lexus-design-award-2017/" target="_blank">참여하기</a>
-											<!-- background:url(../images/lexus_story/amazing/btn_design_award_gojoin.jpg) 0 0 no-repeat; -->
 										</div>
 									</dd>
 								</dl>
@@ -326,8 +324,10 @@
 										<li class="img-con">
 											<a href="http://www.sebastianscherer.com/"><img src="../../asset/image/story/project/design_award_movie_img_2016.jpg" alt="작품스틸컷" /></a>
 										</li>
-										<li class="txt-con"><img src="../../asset/image/story/project/design_award_movie_text_2016.png" alt="Agar Plasticity / 멘토링을 할 때마다 발전할 수 있었습니다 / Amam(japan)" /></li>
-										<li class="pic-con"><img src="../../asset/image/story/project/design_award_picture2016.jpg" alt="DESIGN AWARD 작가 이미지" /></li>
+										<li class="txtpic-con">
+											<img src="../../asset/image/story/project/design_award_movie_text_2016.png" alt="Agar Plasticity / 멘토링을 할 때마다 발전할 수 있었습니다 / Amam(japan)" />
+											<img src="../../asset/image/story/project/design_award_picture2016.jpg" alt="DESIGN AWARD 작가 이미지"  />
+										</li>
 										<li class="year-con"><img src="../../asset/image/story/project/shortfilm_date_2016.png" alt="2016" /></li>
 									</ul>
 								</li>
@@ -336,8 +336,10 @@
 										<li class="img-con">
 											<a href="http://www.sebastianscherer.com/" target="_blank"><img src="../../asset/image/story/project/design_award_movie_img_2015.jpg" alt="작품스틸컷" /></a>
 										</li>
-										<li class="txt-con"><img src="../../asset/image/story/project/design_award_movie_text_2015.png" alt="SENSE-WEAR / 처음의 드로잉보다 최종 스케치는 많이 발전하였습니다 / EMANUELA CORTI & IVAN PARAT(DUBAI)" /></li>
-										<li class="pic-con"><img src="../../asset/image/story/project/design_award_picture2015.jpg" alt="DESIGN AWARD 작가 이미지" /></li>
+										<li class="txtpic-con">
+											<img src="../../asset/image/story/project/design_award_movie_text_2015.png" alt="SENSE-WEAR / 처음의 드로잉보다 최종 스케치는 많이 발전하였습니다 / EMANUELA CORTI & IVAN PARAT(DUBAI)" />
+											<img src="../../asset/image/story/project/design_award_picture2015.jpg" alt="DESIGN AWARD 작가 이미지" />
+										</li>
 										<li class="year-con"><img src="../../asset/image/story/project/shortfilm_date_2015.png" alt="2015" /></li>
 									</ul>
 								</li>
@@ -346,8 +348,10 @@
 										<li class="img-con">
 											<a href="http://www.sebastianscherer.com/" target="_blank"><img src="../../asset/image/story/project/design_award_movie_img_0.jpg" alt="작품스틸컷" /></a>
 										</li>
-										<li class="txt-con"><img src="../../asset/image/story/project/design_award_movie_text_0.png" alt="IRIS / 렉서스 디자인 어워드 수상으로 2014년엔 모든 것이 바뀌었습니다 / SEVASTIAN SCHERER (GERMANY)" /></li>
-										<li class="pic-con"><img src="../../asset/image/story/project/design_award_picture0.jpg" alt="DESIGN AWARD 작가 이미지" /></li>
+										<li class="txtpic-con">
+											<img src="../../asset/image/story/project/design_award_movie_text_0.png" alt="IRIS / 렉서스 디자인 어워드 수상으로 2014년엔 모든 것이 바뀌었습니다 / SEVASTIAN SCHERER (GERMANY)" />
+											<img src="../../asset/image/story/project/design_award_picture0.jpg" alt="DESIGN AWARD 작가 이미지" />
+										</li>
 										<li class="year-con"><img src="../../asset/image/story/project/shortfilm_date_2014.jpg" alt="2014" /></li>
 									</ul>
 								</li>
@@ -356,8 +360,10 @@
 										<li class="img-con">
 											<a href="http://skippingrockslab.com/ooho!-the-edible-water-sphere.html?utm_expid=99785118-0.BQTQZtqbRMqLw_Uz-gi9-g.2&utm_referrer=http%3A%2F%2Flexus.co.kr%2Fhtml%2Flexus_story%2Famazing_in_motion.asp" target="_blank"><img src="../../asset/image/story/project/design_award_movie_img_1.jpg" alt="작품스틸컷" /></a>
 										</li>
-										<li class="txt-con"><img src="../../asset/image/story/project/design_award_movie_text_1.png" alt="OOHO / 수상이후 전세계적으로 우리의 작품이 미디어에 소개되었습니다 / SKIPPING ROCKS LAB(SPAIN, FRANCE, UK)" /></li>
-										<li class="pic-con"><img src="../../asset/image/story/project/design_award_picture1.jpg" alt="DESIGN AWARD 작가 이미지" /></li>
+										<li class="txtpic-con">
+											<img src="../../asset/image/story/project/design_award_movie_text_1.png" alt="OOHO / 수상이후 전세계적으로 우리의 작품이 미디어에 소개되었습니다 / SKIPPING ROCKS LAB(SPAIN, FRANCE, UK)" />
+											<img src="../../asset/image/story/project/design_award_picture1.jpg" alt="DESIGN AWARD 작가 이미지"/>
+										</li>
 										<li class="year-con"><img src="../../asset/image/story/project/shortfilm_date_2014.jpg" alt="2014" /></li>
 									</ul>
 								</li>
@@ -366,8 +372,10 @@
 										<li class="img-con">
 											<a href="http://www.tangent.uk.com/" target="_blank"><img src="../../asset/image/story/project/design_award_movie_img_2.jpg" alt="작품스틸컷" /></a>
 										</li>
-										<li class="txt-con"><img src="../../asset/image/story/project/design_award_movie_text_2.png" alt="INAHO / 구현과 홍보가 가장 어려운 문제였는데 LDA를 통해 이것을 극복할 수있었습니다 / TANGENT (JAPAN, UK)" /></li>
-										<li class="pic-con"><img src="../../asset/image/story/project/design_award_picture2.jpg" alt="DESIGN AWARD 작가 이미지" /></li>
+										<li class="txtpic-con">
+											<img src="../../asset/image/story/project/design_award_movie_text_2.png" alt="INAHO / 구현과 홍보가 가장 어려운 문제였는데 LDA를 통해 이것을 극복할 수있었습니다 / TANGENT (JAPAN, UK)" />
+											<img src="../../asset/image/story/project/design_award_picture2.jpg" alt="DESIGN AWARD 작가 이미지"  />
+										</li>
 										<li class="year-con"><img src="../../asset/image/story/project/shortfilm_date_2013.jpg" alt="2013" /></li>
 									</ul>
 								</li>
