--- a/WebContent/pages/service/lxsv.html
+++ b/WebContent/pages/service/lxsv.html
@@ -34,9 +34,7 @@
         <ul class="sv-list">
           <li class="first">
             <dl>
-              <dt>SERVICE
-                <span>ADVISOR</span>
-              </dt>
+              <dt>SERVICE <span>TECHNICIAN</span></dt>
               <dd class="txt">서비스 어드바이저는 고객님의 서비스 전반을 도와드리는 전문 가이드입니다.
 								서비스의 예약에서부터 차량 인도까지 쉽게 이해하실 수 있도록 친절하게 안내해 드리며, 고객님의 카 라이프에 맞춰 적절한 제안과 상담을 해드립니다.</dd>
               <dd class="lsvc-img"><img src="../../asset/image/service/sec2_img_1.jpg" alt=""></dd>
@@ -44,9 +42,7 @@
           </li>
           <li class="second">
             <dl>
-              <dt>SERVICE
-                <span>TECHNICIAN</span>
-              </dt>
+              <dt>SERVICE <span>TECHNICIAN</span></dt>
               <dd class="txt">서비스 테크니션은 매년 자체 인증 시스템을 통해 선발된 최고의 정비 전문가입니다.
 								수년간의 정비 경험과 숙련된 기술로 고객님의 차량의 가치를 높여드립니다.</dd>
               <dd class="lsvc-img"><img src="../../asset/image/service/sec2_img_2.jpg" alt=""></dd>
@@ -80,11 +76,11 @@
     <section class="lxsv_con_2">
       <div class="cont-wrap">
         <p class="fig-cont">
-          <img src="" alt="">
+          <img src="../../asset/image/service/bg_s3_1.jpg" alt="">
         </p>
         <div class="fig-txt">
-          <h3><img src="/asset/images/service/lexus_service/head_s3_1.png" alt="CUSTOMER SATISFACTION"></h3>
-          <p><img src="/asset/images/service/lexus_service/text_s3_1.png" alt="최상의 고객만족을 위한 다양한 서비스 시설이 준비되어 있습니다"></p>
+          <h3><img src="../../asset/image/service/head_s3_1.png" alt="CUSTOMER SATISFACTION"></h3>
+          <p><img src="../../asset/image/service/text_s3_1.png" alt="최상의 고객만족을 위한 다양한 서비스 시설이 준비되어 있습니다"></p>
         </div>
       </div>
       <div class="inner-cont-wrap">
@@ -94,21 +90,21 @@
               <dt>RECEPTION</dt>
               <dd class="txt">고객님을 위한 전용 리셉션을 운영하고 있습니다.
 								서비스 리셉션에서는 고객님의 예약, 접수, 인도를 도와드리며 언제든지 방문해 주시면 친절하게 상담해 드리도록 하겠습니다.</dd>
-              <dd class="lsvc-img"><img src="/asset/images/service/lexus_service/sec3_img_1.jpg" alt=""></dd>
+              <dd class="lsvc-img"><img src="../../asset/image/service/sec3_img_1.jpg" alt=""></dd>
             </dl>
           </li>
           <li class="second">
             <dl>
               <dt>CUSTOMER <span>LOUNGE</span></dt>
               <dd class="txt">차량 정비를 기다리시는 동안 편안하게 휴식을 취할 수 있도록  음료, 다과 및 다양한 부대시설을 즐기실 수 있는 고객 라운지가 마련되어 있습니다.</dd>
-              <dd class="lsvc-img"><img src="/asset/images/service/lexus_service/sec3_img_2.jpg" alt=""></dd>
+              <dd class="lsvc-img"><img src="../../asset/image/service/sec3_img_2.jpg" alt=""></dd>
             </dl>
           </li>
           <li class="third">
             <dl>
               <dt>REPAIR AREA</dt>
               <dd class="txt">>최점단 정비시스템과 전문 장비 기기를 갖추고 있어 고객님께 한차원 높은 정비 서비스를 제공해 드립니다. </dd>
-              <dd class="lsvc-img"><img src="/asset/images/service/lexus_service/sec3_img_3.jpg" alt=""></dd>
+              <dd class="lsvc-img"><img src="../../asset/image/service/sec3_img_3.jpg" alt=""></dd>
             </dl>
           </li>
         </ul>
@@ -125,11 +121,11 @@
     <section class="lxsv_con_3">
       <div class="con-wrap">
         <p class="fig-cont">
-          <img src="/asset/images/service/lexus_service/bg_s4_1.jpg" alt="">
+          <img src="../../asset/image/service/bg_s4_1.jpg" alt="">
         </p>
         <div class="fig-txt">
-          <h3><img src="/asset/images/service/lexus_service/head_s4_1.png" alt="GUARANTEE THE BEST QUALITY"></h3>
-          <p><img src="/asset/images/service/lexus_service/text_s4_1.png" alt="렉서스의 장인 정신으로 만들어진 렉서스 순정 부품은 엄격한 생산 기준과 심사 기준으로 최고의 품질을 보장합니다"></p>
+          <h3><img src="../../asset/image/service/head_s4_1.png" alt="GUARANTEE THE BEST QUALITY"></h3>
+          <p><img src="../../asset/image/service/text_s4_1.png" alt="렉서스의 장인 정신으로 만들어진 렉서스 순정 부품은 엄격한 생산 기준과 심사 기준으로 최고의 품질을 보장합니다"></p>
         </div>
       </div>
       <div class="inner-cont-wrap">
@@ -206,7 +202,7 @@
                 </dt>
                 <dd class="txt">정비결과를 상세히 안내 드리며 약속 시간에 차량을 인도합니다. 또한 정기 점검, 소모품 관리를 위해 다음 방문 시기를 안내해 드립니다.</dd>
                 <dd class="icon"></dd>
-              </dl
+              </dl>
             </li>
             <li class="lsvc-6">
               <dl>
@@ -216,7 +212,7 @@
                 </dt>
                 <dd class="txt">차량 인도 후 72시간 이내에 정비 받으신 사항에 대하여 확인하기 위하여 해피콜을 실시합니다. 해피콜을 통한 만족도 및 의견을 통하여 더 나은 서비스를 제공해 드리기 위하여 노력합니다. </dd>
                 <dd class="icon"></dd>
-              </dl
+              </dl>
             </li>
           </ul>
           <p class="txt-list">렉서스 서비스 프로세스는 6단계로 구성되어 있으며  전 세계에서 공통으로 사용하고 있는 글로벌 표준 서비스 절차입니다. </p>
@@ -234,18 +230,21 @@
       </div>
       <div class="inner-cont-wrap">
         <div class="lsvc-campain">
-          <img src="/asset/images/service/lexus_service/sec6_img_1.jpg" alt="">
+          <img src="../../asset/image/service/sec6_img_1.jpg" alt="">
           <dl>
             <dt>렉서스 서비스 캠페인</dt>
             <dd>한결 같이 렉서스를 사랑해 주시는 고객님을 위하여 정기적으로 서비스 캠페인을 실시합니다.
 							렉서스 서비스 캠페인은 고객님의 안전한 드라이빙과 적절한 차량 관리를 위하여 계절에 맞는 표준 점검 서비스 및 다양한 이벤트를 통해 많은 혜택을 제공합니다</dd>
           </dl>
+          <div class="btn-area">
+            <a href="/html/service/serviceprogram.asp#program.html">
+            <!-- 서비스프로그램페이지로 연결시킴 -->
+            서비스 캠페인 바로가기
+            <i class="arr"></i>
+            </a>
+          </div>
         </div>
-        <div class="btn-area">
-          <!-- <a href="/html/service/serviceprogram.asp#program.html"></a> 서비스프로그램페이지로 연결시킴-->
-          서비스 캠페인 바로가기
-          <i class="arr"></i>
-        </div>
+
 
       </div>
     </section>
